--- a/apps/front/app/globals.css
+++ b/apps/front/app/globals.css
@@ -162,3 +162,18 @@
 .direction-rtl {
   direction: rtl;
 }
+
+@layer components {
+  .container {
+    @apply max-w-[1440px] mx-auto my-0 py-12 px-2 md:px-8  md:py-4;
+  }
+}
+
+@utility scrollbar-hidden {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
